# Digital_Lock

./: README.md  addRFID.drawio  kiemtramanhinh.drawio  main_flowchart.drawio  platformio.ini  scanPass.drawio  theme_DigitalLock copy.ino  theme_DigitalLock.ino.cpp  xulysukienchomanhinh.drawio
.pio/libdeps/upesy_wroom/Adafruit Fingerprint Sensor Library/: .piopm
.pio/libdeps/upesy_wroom/MFRC522/src/: MFRC522.cpp
flowchart/: addFP.drawio  delFP.drawio  delRFID.drawio  opendoorcheck.drawio  scanFP.drawio  scanRFID.drawio  solanxacthucsai.drawio  xulysukienchomanhinh.drawio
include/: Keypad.hpp  Password.hpp  funcUi.hpp  gui.hpp  historyHandler.hpp  myEEPROM.hpp  myFingerPrint.hpp  myRFID.hpp  realtime.hpp  utils.hpp
lib/: lv_conf.h
lib/TFT_eSPI/: User_Setup.h
lib/lvgl/src/font/: lv_symbol_def.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
lib/ui/src/components/: ui_comp_hook.c
lib/ui/src/images/: ui_img_iconcard_png.c  ui_img_iconfinger_png.c  ui_img_iconhome_png.c  ui_img_iconpassword_png.c  ui_img_iconsetting_png.c  ui_img_iconunlock_png.c
lib/ui/src/screens/: ui_SceenCard.c  ui_SceenFinger.c  ui_SceenPassword.c  ui_Screen1.c  ui_Screen3.c  ui_ScreenHistory.c  ui_ScreenSetting.c  ui_screenCardAdd.c  ui_screenCardDelete.c  ui_screenCardShow.c  ui_screenFingerAdd.c  ui_screenFingerDelete.c  ui_screenFingerShow.c
src/: Keypad.cpp  Password.cpp  funcUi.cpp  gui.cpp  historyHandler.cpp  myEEPROM.cpp  myFingerPrint.cpp  myRFID.cpp  realtime.cpp  theme_DigitalLock.ino  utils.cpp
(+1 files in other folders)
